onnx export bug fixes